Stops page jump when switching instructions

--- a/src/sketches/main/css/styles.scss
+++ b/src/sketches/main/css/styles.scss
@@ -91,6 +91,7 @@ body {
 }
 .layer.will-exit {
   background-color: #FFD95B;
+  color: #3B2E02;
 }
 .layer.is-zooming {
   box-shadow: 5px 5px 0px rgba(0,0,0,0.33);
